--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,10 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install Docker
-        uses: sudo curl -L "https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
-              sudo chmod +x /usr/local/bin/docker-compose && \
-              export PATH=$PATH:/usr/local/bin && \
-              source ~/.bashrc
+        uses: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            export PATH=$PATH:/usr/local/bin
+            source ~/.bashrc
       - name: Verify Docker Version
         uses: docker-compose --version
       - name: Test
