--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,8 +15,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Docker
+        run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            export PATH=$PATH:/usr/local/bin
+            source ~/.bashrc
       - name: Verify Docker Version
-        uses: docker-compose --version
+        run: docker-compose --version
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
